[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
object = { path = "../object" }
controller = { path = "../controller" }
gfx_device_gl = "*"
piston2d-gfx_graphics = "*"

