[package]
name = "sprites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "*"
piston_window = "*"
object = { path = "../object" }
model = { path = "../model" }
gfx = "*"
gfx_core = "*"
